# Geometric-Shapes-Project-CPP

./: CMakeLists.txt  README.md  README.txt
include/: Board.h  Hexagram.h  Rectangle.h  Triangle.h  Utilities.h  Vertex.h  Window.h  macros.h
src/: Board.cpp  CMakeLists.txt  Hexagram.cpp  Rectangle.cpp  Triangle.cpp  Utilities.cpp  Vertex.cpp  Window.cpp  main.cpp
